ec2_vpc/module/SG.tf
resource "aws_security_group" "sg" {
  vpc_id = aws_vpc.terraform_vpc.id
  name = var.sgname
  description="Allow SSH HTTP"

  ingress {
    description = "SSH"
    from_port = "22"
    to_port = "22"
    protocol = "tcp"
    cidr_blocks = var.cidr
  }

  ingress{
    description = "HTTP"
    from_port = "80"
    to_port = "80"
    protocol = "tcp"
    cidr_blocks = var.cidr
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = var.cidr
  }

  tags={
    Name = var.sgname
  }
}
